--- a/chrome_ext/popup.html
+++ b/chrome_ext/popup.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Text Selection Result</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="popup.css">
+  <title>LLM Text processor</title>
+  <script src="popup.js"></script>
 </head>
 <body>
   <div id="result"></div>
-  <script src="popup.js"></script>
 </body>
 </html>
