--- a/chrome_ext/popup.html
+++ b/chrome_ext/popup.html
@@ -6,6 +6,6 @@
   <script src="popup.js"></script>
 </head>
 <body>
-  <div id="result"></div>
+  <div id="result">NOT USED AT THO MOMENT</div>
 </body>
 </html>
