--- a/chrome_ext/sidepanel.html
+++ b/chrome_ext/sidepanel.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <div class="sidepanel">
-        <h2>Sidepanel tartalom</h2>
-        <p>Ez itt a sidepanel tartalma.</p>
+        <h2>LLM Text processing results</h2>
+        <p>Result list for the ELTE LLM plugin.</p>
 
-        HELLO WORLD 3
         <div id="result"></div>
         <div id="deleteButtonDiv">
             <button id="deleteButton">DELETE LIST</button>
